# esp-hosted

./: .gitmodules
common/: esp_hosted_config.pb-c.c
common/include/: adapter.h  esp_hosted_config.pb-c.h
common/proto/: esp_hosted_config.proto
esp/esp_driver/network_adapter/main/: CMakeLists.txt  app_main.c  interface.h  slave_commands.c  slave_commands.h  spi_slave_api.c
esp_hosted_fg/common/: esp_hosted_config.pb-c.c
esp_hosted_fg/common/include/: esp_hosted_config.pb-c.h
esp_hosted_fg/common/proto/: esp_hosted_config.proto
esp_hosted_fg/esp/esp_driver/network_adapter/: sdkconfig
esp_hosted_fg/esp/esp_driver/network_adapter/main/: CMakeLists.txt  app_main.c  slave_control.c  slave_control.h  spi_slave_api.c
esp_hosted_fg/host/control_lib/include/: ctrl_api.h
esp_hosted_fg/host/control_lib/src/: ctrl_api.c  ctrl_core.c
esp_hosted_fg/host/swiftio/: CMakeLists.txt  mad_esp.c  mad_esp.h
esp_hosted_fg/host/swiftio/common/: common.c  common.h  util.c  util.h
esp_hosted_fg/host/swiftio/driver/network/: netdev_api.c  netdev_api.h  netdev_stub.c  netdev_stub.h
host/host_common/: commands.c
host/host_common/include/: commands.h
host/swiftio/: CMakeLists.txt  mad_esp.c  mad_esp.h  platform_wrapper.c
host/swiftio/common/: common.c  common.h  util.c  util.h
host/swiftio/driver/network/: netdev_api.c  netdev_api.h  netdev_stub.c  netdev_stub.h
host/swiftio/driver/serial/: serial_drv.h  serial_if.c  serial_if.h
host/swiftio/driver/spi/: hosted_spi.c  hosted_spi.h  spi_drv.c  spi_drv.h
host/swiftio/driver/vhci/: vhci_if.c
(+9 files in other folders)
